--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,25 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: citipy in /opt/anaconda3/lib/python3.8/site-packages (0.0.5)\r\n",
-      "Requirement already satisfied: kdtree>=0.12 in /opt/anaconda3/lib/python3.8/site-packages (from citipy) (0.16)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install citipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,30 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.12903645 -67.59741259\n",
-      "25.92017388 11.09532135\n",
-      "26.62509167 74.84233102\n",
-      "-59.98969384 -76.89176677\n",
-      "37.30571269 -61.13376282\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Use the tuple() function to display the latitude and longitude combinations.\n",
-    "for coordinate in coordinates:\n",
-    "    print(coordinate[0], coordinate[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,19 +24,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cockburn town tc\n",
+      "gat ly\n",
+      "parvatsar in\n",
+      "punta arenas cl\n",
+      "saint george bm\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the tuple() function to display the latitude and longitude combinations.\n",
     "for coordinate in coordinates:\n",
-    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
-    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
+    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name, citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +107,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +129,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +152,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.06,\"lat\":42.36},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02d\"}],\"base\":\"stations\",\"main\":{\"temp\":35.92,\"feels_like\":24.42,\"temp_min\":33.8,\"temp_max\":37.99,\"pressure\":1025,\"humidity\":50},\"visibility\":10000,\"wind\":{\"speed\":11.41,\"deg\":290},\"clouds\":{\"all\":20},\"dt\":1609089029,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1609071158,\"sunset\":1609103895},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.06,\"lat\":42.36},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":43.43,\"feels_like\":34.75,\"temp_min\":42.01,\"temp_max\":45,\"pressure\":1017,\"humidity\":65},\"visibility\":10000,\"wind\":{\"speed\":9.17,\"deg\":290,\"gust\":18.34},\"clouds\":{\"all\":90},\"dt\":1609437573,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1609416802,\"sunset\":1609449677},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,40 +187,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.06, 'lat': 42.36},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 804,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02d'}],\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 35.92,\n",
-       "  'feels_like': 24.42,\n",
-       "  'temp_min': 33.8,\n",
-       "  'temp_max': 37.99,\n",
-       "  'pressure': 1025,\n",
-       "  'humidity': 50},\n",
+       " 'main': {'temp': 43.43,\n",
+       "  'feels_like': 34.75,\n",
+       "  'temp_min': 42.01,\n",
+       "  'temp_max': 45,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 65},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 11.41, 'deg': 290},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1609089029,\n",
+       " 'wind': {'speed': 9.17, 'deg': 290, 'gust': 18.34},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1609437573,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1609071158,\n",
-       "  'sunset': 1609103895},\n",
+       "  'sunrise': 1609416802,\n",
+       "  'sunset': 1609449677},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -308,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=5505a5fab675d3ef84a7fbbc45235df5&q=Boston\n"
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=5505a5fab675d3ef84a7fbbc45235df5&q=Bston\n"
      ]
     }
    ],
@@ -325,40 +295,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.06, 'lat': 42.36},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 804,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02d'}],\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 35.89,\n",
-       "  'feels_like': 24.39,\n",
-       "  'temp_min': 33.8,\n",
-       "  'temp_max': 37.99,\n",
-       "  'pressure': 1025,\n",
-       "  'humidity': 50},\n",
+       " 'main': {'temp': 43.43,\n",
+       "  'feels_like': 34.75,\n",
+       "  'temp_min': 42.01,\n",
+       "  'temp_max': 45,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 65},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 11.41, 'deg': 290},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1609088759,\n",
+       " 'wind': {'speed': 9.17, 'deg': 290, 'gust': 18.34},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1609437602,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1609071158,\n",
-       "  'sunset': 1609103895},\n",
+       "  'sunrise': 1609416802,\n",
+       "  'sunset': 1609449677},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -391,11 +361,11 @@
        "{'type': 1,\n",
        " 'id': 3486,\n",
        " 'country': 'US',\n",
-       " 'sunrise': 1609071158,\n",
-       " 'sunset': 1609103895}"
+       " 'sunrise': 1609416802,\n",
+       " 'sunset': 1609449677}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +385,7 @@
        "'US'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,16 +396,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1609088759"
+       "1609437602"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,14 +416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.36 -71.06 37.99 50 20 11.41\n"
+      "42.36 -71.06 45 65 90 9.17\n"
      ]
     }
    ],
@@ -469,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2020, 12, 27, 17, 5, 59)"
+       "datetime.datetime(2020, 12, 31, 18, 0, 2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2020-12-27 17:05:59'"
+       "'2020-12-31 18:00:02'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,16 +484,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1609204104.9883451"
+       "1609438118.5552971"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,16 +508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12/28/20'"
+       "'12/31/20'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
